--- a/Spotipy.ipynb
+++ b/Spotipy.ipynb
@@ -35,8 +35,8 @@
    ],
    "source": [
     "\n",
-    "client_id = 'e7f12c16406e4ac2a1fe19f334f84ee2'\n",
-    "client_secret = '2b2b03d5e0ed41bea06ee6738ddf09fd'\n",
+    "client_id = ''\n",
+    "client_secret = ''\n",
     "\n",
     "auth_manager = SpotifyClientCredentials(client_id, client_secret)\n",
     "sp = spotipy.Spotify(auth_manager=auth_manager)\n",
